[gd_scene load_steps=3 format=3 uid="uid://dnqot444thbxf"]

[ext_resource type="Script" uid="uid://dh5u5arar1c3n" path="res://main_menu.gd" id="1_06t4h"]

[sub_resource type="Theme" id="Theme_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 384.0
offset_right = 640.0
offset_bottom = 512.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 103.0
theme = SubResource("Theme_06t4h")
theme_type_variation = &"HeaderLarge"
text = "REPO TEST"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
